--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACK_URL=https://proyectofinal-backend.vercel.app/
+REACT_APP_BACK_URL=https://proyectofinal-backend.vercel.app/  
+# REACT_APP_BACK_URL=http://localhost:8080/  
