--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACK_URL=https://proyectofinal-backend.vercel.app/  
-# REACT_APP_BACK_URL=http://localhost:8080/  
+# REACT_APP_BACK_URL=https://proyectofinal-backend.vercel.app/    
+REACT_APP_BACK_URL=http://localhost:8080/    
