--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.56.1",
+    "styled-components": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
